# rust-telegram-stealer

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: core.rs  main.rs
src/utils/: filesystem.rs  mod.rs  net.rs  os.rs
